<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_sell"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_stock"
        android:icon="@drawable/ic_nav_stock"
        android:title="@string/stock" />
    <item
        android:id="@+id/nav_sales"
        android:icon="@drawable/ic_nav_sales"
        android:title="@string/sales" />
    <item
        android:id="@+id/nav_ingredients"
        android:icon="@drawable/ic_nav_ingredients"
        android:title="@string/nav_ingredients" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_nav_reports"
        android:title="@string/reports" />
</menu>
